# javanSanat

./: pyproject.toml
core/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
core/accounts/migrations/: 0001_initial.py  0002_contactinfo_sociallink.py  0003_remove_sociallink_icon.py
core/articles/: admin.py  models.py  serializers.py  urls.py  views.py
core/articles/migrations/: 0001_initial.py  0002_alter_article_featured_image.py  0003_courseinfo_alter_article_featured_image_courseimage.py  0004_alter_courseimage_options_alter_courseinfo_options_and_more.py  0005_alter_courseimage_image.py  0006_videocast.py  0007_alter_videocast_options_and_more.py  0008_alter_videocast_aparat_url.py  0009_industrialtourism_alter_courseimage_options_and_more.py  0010_alter_industrialtourismimages_options.py  0011_alter_industrialtourismimages_image.py  0012_article_show.py  0013_alter_article_featured_image.py  0014_alter_courseimage_image_alter_courseinfo_base_image_and_more.py  0015_alter_article_featured_image.py  0016_alter_courseinfo_duration.py  0017_alter_courseinfo_description.py
core/contactUs/: admin.py  models.py  serializers.py  urls.py  views.py
core/contactUs/migrations/: 0001_initial.py  0002_alter_communicationwithus_created_at_and_more.py  0003_alter_communicationwithus_options_and_more.py
core/core/: settings.py  urls.py
core/siteAssets/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
core/siteAssets/migrations/: 0001_initial.py  0002_homeimage_show.py  0003_alter_homeimage_image.py  0004_alter_homeimage_image.py  (+1 more)
